styles.css
body {
    background-color: rgba(176,139,198,255);
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.mobile {
    background-color: white;
    width: 18rem;
    border: 2px solid white;
    border-radius: 1.2rem;
    display: block;
    box-shadow: 0 0px 1px 0 rgb(0 0 0 / 20%), 0 0px 1px 0 rgb(0 0 0 / 19%);
}

.wallpaper {
    display: block;
}

img {
    width: 17.8rem;
    height: 28rem;
    border-radius: 1rem 1rem 0rem 0rem;
    display: block;
    margin: auto;
    text-align: center;
}


.navList {
    list-style-type: none;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    text-align: center;
    padding: 0px;
    color: gray;
}

li {
    font-size: 1rem;
}

.navList1 {
    margin-top: 0;
    font-size: 20px;
    text-align: center;
    margin-bottom: 7px;
}

.hov:hover {
    color: purple;
}

.text {
    font-size: 12px;
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    margin-top: 3px;
}

